# OSI

./: README.md
1.6(second_semestr)/: CMakeLists.txt  README.md  main.c  mythread  mythread.c  mythread.h
2.3(second_semestr)/: README.md
2.3(second_semestr)/mutex/: .gitignore  Node.h  Node_mutex  Thread_readers.c  Thread_readers.h  Thread_swapers.c  Thread_swappers.c  Thread_swappers.h  Utils.c  Utils.h  main.c
2.3(second_semestr)/rw_block/: .gitignore  Node.h  Thread_readers.c  Thread_swappers.c  Thread_swappers.h  Utils.c  Utils.h  main.c
2.3(second_semestr)/spinlock/: .gitignore  Node.h  Node_spinlock  Thread_readers.c  Thread_readers.h  Thread_swapers.c  Thread_swappers.c  Thread_swappers.h  Utils.c  main.c
http_proxy/: .clang-format  CMakeLists.txt  README.md  client_handler.c  http_parser.c  main.c  network_utils.c  proxy  proxy.c  proxy.h  proxy_server.c
